syntax = "proto3";

package elastic.apm.v1;

import "google/protobuf/struct.proto";

option go_package = "/modelpb";

message HTTP {
  optional HTTPRequest request = 1;
  optional HTTPResponse response = 2;
  string version = 3;
}

message HTTPRequest {
  google.protobuf.Struct body = 1;
  google.protobuf.Struct headers = 2;
  google.protobuf.Struct env = 3;
  google.protobuf.Struct cookies = 4;
  string id = 5;
  string method = 6;
  string referrer = 7;
}

message HTTPResponse {
  google.protobuf.Struct headers = 1;
  optional bool finished = 2;
  optional bool headers_sent = 3;
  optional int64 transfer_size = 4;
  optional int64 encoded_body_size = 5;
  optional int64 decoded_body_size = 6;
  int32 status_code = 7;
}
