syntax = "proto3";

package elastic.apm.v1;

option go_package = "/modelpb";

message UserAgent {
  string original = 1;
  string name = 2;
}
